--- a/source/_posts/2013-11-07-rethink.markdown
+++ b/source/_posts/2013-11-07-rethink.markdown
@@ -28,7 +28,7 @@ categories: 随笔
 
 #### 某个阿姨。
 
-  实际上她们的意思是你太幼稚了。最于这种评判，我不否认，也懒得和她们争论。对于这种很空洞的没有调查的评论我是会回报给她们一个善良的微笑的。参见下面的“解释”部分。
+  实际上她们的意思是你太幼稚了。对于这种评判，我不否认，也懒得和她们争论。对于这种很空洞的没有调查的评论我是会回报给她们一个善良的微笑的。参见下面的“解释”部分。
 
   回答方式：99%以上是含糊的回答。
 
@@ -38,7 +38,7 @@ categories: 随笔
 
   - 他（也就是我）是怎么理想主义的
   - 他怎么这么爱给自己贴金，现在什么都可以标榜，比如理想主义，什么也都可以拿来吵，比如孤独
-  - 他还想呆在校园里的学生
+  - 他还像呆在校园里的学生
   - 他这样的人挺好，但是经常不切实际
   - 有点理想化挺好，但还是得适应社会
   - 他怎么处理与领导的关系
