--- a/source/_posts/2013-12-16-why-d3.markdown
+++ b/source/_posts/2013-12-16-why-d3.markdown
@@ -11,6 +11,7 @@ categories: D3
 原始文章发表于[好奇猫博客](http://haoqicat.com/blog/8-wo-wei-shi-yao-xuan-ze-d3)。
 
 这不是一篇介绍D3的使用[教程](http://haoqicat.com/luckyyang/wang-ye-shang-de-tu-biao)，而是只想说说我为什么选择使用D3，借以思考在面对新的技术的时候我还如何选择。
+<!-- more -->
 
 这段时间我在录制一门课程[网页上的图表](http://haoqicat.com/luckyyang/wang-ye-shang-de-tu-biao)。录制课程前我调查了一下，应该用哪些工具/库来制作图表。可以确定的是，我要用svg来生成图表，而不是用html5中的canvas。最开始采用的是[Raphaël](http://raphaeljs.com/)，一个用来创建和操作网页上矢量图形的javascript库。最开始偏向于使用Raphaël是因为之前看到的一个[很漂亮的页面](http://www.wendyshijia.com/)。在费了几天的时间，经过了很多挫折和参考资料没找到太多的情况下，做出了一个凑合的[简单的图表](http://codepen.io/luckyyang/pen/nhLqG)。然后我退缩了，直到我发现了[D3](http://www.d3js.org/)。
 
